# wayfinder

./: README.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/agents/: orchestrator.py
backend/data/: sf-knowledge-base.json
backend/services/: augment_kb.py  gradient.py  knowledge_base.py  maps.py  spotify.py  weather_nexla.py  weather_openmeteo.py
frontend/wayfinder-app/: package-lock.json  package.json
frontend/wayfinder-app/app/: assistant.tsx  layout.tsx  page.tsx
frontend/wayfinder-app/app/api/chat/: route.ts
frontend/wayfinder-app/app/api/tts/: route.ts
frontend/wayfinder-app/components/tool-uis/: journey-chapter.tsx  map-route.tsx  weather-card.tsx
